# python_mongo

./: .dockerignore  .gitignore  LICENSE  Makefile  NOTICE  README.md  dockerfile  main.py  pyproject.toml  requirements.txt
